// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateStructuredOutputSchema > capitalises first letter of type name 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { z } from 'zod'

// TODO: define your schema
export const searchResultSchema = z.object({
  // example:
  // field: z.string(),
  // items: z.array(z.string()),
})

export type SearchResult = z.infer<typeof searchResultSchema>
"
`;

exports[`generateStructuredOutputSchema > generates schema with default name 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { z } from 'zod'

// TODO: define your schema
export const outputSchema = z.object({
  // example:
  // field: z.string(),
  // items: z.array(z.string()),
})

export type Output = z.infer<typeof outputSchema>
"
`;

exports[`generateStructuredOutputSchema > uses custom schema name 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { z } from 'zod'

// TODO: define your schema
export const filterSchema = z.object({
  // example:
  // field: z.string(),
  // items: z.array(z.string()),
})

export type Filter = z.infer<typeof filterSchema>
"
`;
